[gd_scene load_steps=12 format=3 uid="uid://ckosn5b4q8oak"]

[ext_resource type="Script" path="res://scripts/menu_principal.gd" id="1_i4jmv"]
[ext_resource type="Texture2D" uid="uid://biak7mb65wxw0" path="res://sprites/Fundo5.png" id="2_b3hhf"]
[ext_resource type="Texture2D" uid="uid://b18lmyyppbux4" path="res://sprites/tela de menu.png" id="2_f8ny3"]
[ext_resource type="FontFile" uid="uid://0tgqo0vgbhkb" path="res://fonts/BalooThambi2-Bold.ttf" id="3_brt5b"]
[ext_resource type="Texture2D" uid="uid://dogns0etjy3ke" path="res://sprites/botão 7.png" id="4_510id"]
[ext_resource type="Texture2D" uid="uid://sdnpcyqn8f82" path="res://sprites/botão 8.png" id="5_ht2rb"]

[sub_resource type="LabelSettings" id="LabelSettings_dc8x2"]
font = ExtResource("3_brt5b")
font_size = 50

[sub_resource type="GDScript" id="GDScript_40msf"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_lipa1"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_aoe30"]
load_path = "res://.godot/imported/botão 7.png-2bd88bdcb2965814db3536b185c347c1.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_a7y3k"]
font = ExtResource("3_brt5b")

[node name="MenuPrincipal" type="Node2D"]
script = ExtResource("1_i4jmv")

[node name="TelaMenu" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_f8ny3")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324.5)
scale = Vector2(2.12963, 0.673958)
texture = ExtResource("2_b3hhf")
region_rect = Rect2(0, 0, 1153, 651)

[node name="Titulo" type="Label" parent="."]
offset_left = 2.0
offset_top = 20.0
offset_right = 1155.0
offset_bottom = 114.0
text = "MENU PRINCIPAL"
label_settings = SubResource("LabelSettings_dc8x2")
horizontal_alignment = 1

[node name="Jogadores" type="Button" parent="."]
offset_left = 429.0
offset_top = 284.0
offset_right = 752.0
offset_bottom = 359.0
text = "Escolher Jogadores"
icon = ExtResource("4_510id")
flat = true
icon_alignment = 1
script = SubResource("GDScript_40msf")

[node name="Regras" type="Button" parent="."]
offset_left = 480.0
offset_top = 476.0
offset_right = 711.0
offset_bottom = 527.0
text = "Regras"
icon = ExtResource("5_ht2rb")
flat = true
icon_alignment = 1
script = SubResource("GDScript_lipa1")

[node name="PopupRegras" type="Popup" parent="."]

[node name="Voltar" type="Button" parent="PopupRegras"]
offset_right = 8.0
offset_bottom = 8.0
text = "Voltar"

[node name="Regras_txt" type="Label" parent="PopupRegras"]
offset_right = 40.0
offset_bottom = 23.0
text = "Acerte as questoes e avance para a casa que o cartao mandar.
Erre as questoes e recue para a casa que o cartao mandar.
Voce pode arriscar e duplicar seu salto, para isso precione o botao \"2x\" antes de ver a questao, "
horizontal_alignment = 1

[node name="PopupJogadores" type="Popup" parent="."]
size = Vector2i(319, 100)

[node name="HBoxContainer" type="HBoxContainer" parent="PopupJogadores"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PopupJogadores/HBoxContainer"]
layout_mode = 2
text = "

Escolha a quantidade de jogadores:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="PopupJogadores/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "2"
popup/item_1/text = "3"
popup/item_1/id = 1
popup/item_2/text = "4"
popup/item_2/id = 2

[node name="VoltarJogador" type="Button" parent="PopupJogadores"]
offset_right = 8.0
offset_bottom = 8.0
text = "Voltar
"

[node name="IniciarJogo" type="Button" parent="."]
offset_left = 431.0
offset_top = 409.0
offset_right = 750.0
offset_bottom = 471.0
text = "Iniciar Jogo"
icon = SubResource("CompressedTexture2D_aoe30")
flat = true
icon_alignment = 1

[node name="Temas" type="Button" parent="."]
offset_left = 426.0
offset_top = 349.0
offset_right = 755.0
offset_bottom = 412.0
text = "Escolher Temas"
icon = SubResource("CompressedTexture2D_aoe30")
flat = true
icon_alignment = 1

[node name="PopupTemas" type="Popup" parent="."]

[node name="Button" type="Button" parent="PopupTemas"]
offset_left = 335.0
offset_top = 89.0
offset_right = 425.0
offset_bottom = 141.0
text = "Confirmar"

[node name="GridContainer" type="GridContainer" parent="PopupTemas"]
offset_right = 40.0
offset_bottom = 40.0

[node name="PopupErro" type="Popup" parent="."]

[node name="Label" type="Label" parent="PopupErro"]
offset_right = 40.0
offset_bottom = 23.0
text = "
  Por favor, escolha um tema."
label_settings = SubResource("LabelSettings_a7y3k")

[node name="VoltarErro" type="Button" parent="PopupErro"]
offset_right = 8.0
offset_bottom = 8.0
text = "Voltar
"

[connection signal="pressed" from="Jogadores" to="." method="_on_jogadores_pressed"]
[connection signal="pressed" from="Regras" to="." method="_on_regras_pressed"]
[connection signal="pressed" from="PopupRegras/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="PopupJogadores/VoltarJogador" to="." method="_on_voltar_jogador_pressed"]
[connection signal="pressed" from="IniciarJogo" to="." method="_on_iniciar_jogo_pressed"]
[connection signal="pressed" from="Temas" to="." method="_on_temas_pressed"]
[connection signal="pressed" from="PopupTemas/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PopupErro/VoltarErro" to="." method="_on_voltar_erro_pressed"]
